# peridot2-experimental

./: .gitignore  Cargo.toml  build.rs
assets/shaders/: test.frag  test.vert
peridot2/peridot2 Shared/: Renderer.swift  ShaderTypes.h  Shaders.metal
peridot2/peridot2 macOS/: AppDelegate.swift  GameViewController.swift
peridot2/peridot2 macOS/Base.lproj/: Main.storyboard
peridot2/peridot2.xcodeproj/: project.pbxproj
peridot2/peridot2.xcodeproj/project.xcworkspace/xcuserdata/pctgx8.xcuserdatad/: UserInterfaceState.xcuserstate
peridot2/peridot2.xcodeproj/xcuserdata/pctgx8.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: game.rs  main.rs  main_linux.rs  main_mac.rs  main_windows.rs
support-crates/epoll/src/: lib.rs
support-crates/eventfd/: Cargo.toml
support-crates/eventfd/src/: lib.rs
support-crates/wayland-client/: Cargo.toml
support-crates/wayland-client/src/: callback.rs  compositor.rs  display.rs  lib.rs  output.rs  registry.rs  seat.rs  surface.rs
support-crates/wayland-client/src/xdg/: mod.rs  popup.rs  positioner.rs  surface.rs  toplevel.rs  wm_base.rs
support-crates/wayland-sys/: Cargo.toml
support-crates/wayland-sys/src/: lib.rs  util.rs
