workspace.members = [
    "support-crates/epoll",
    "support-crates/eventfd",
    "support-crates/wayland-client",
    "support-crates/wayland-sys",
]

[package]
name = "peridot2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
bedrock = { path = "../bedrock", features = [
    "Implements",
    "Presentation",
    "VK_EXT_debug_utils",
] }
futures-util = "0.3.30"

[target.'cfg(target_os = "macos")'.dependencies]
appkit = { path = "../appkit-rs" }
objc = "0.2.7"
objc-ext = { git = "https://github.com/Pctg-x8/objc-ext" }
bedrock = { path = "../bedrock", features = [
    "VK_MVK_macos_surface",
    "VK_KHR_portability_enumeration",
] }

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client.path = "./support-crates/wayland-client"
bedrock = { path = "../bedrock", features = ["VK_KHR_wayland_surface"] }
epoll.path = "./support-crates/epoll"
eventfd.path = "./support-crates/eventfd"

[target.'cfg(target_os = "windows")'.dependencies]
bedrock = { path = "../bedrock", features = ["VK_KHR_win32_surface"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
